# poseidon

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
examples/: iara.ipynb
poseidon/: model_selection.py  utils.py
poseidon/dataset/: __init__.py  dataset.py  loader.py
poseidon/dsp/: utils.py
poseidon/io/: offline.py
poseidon/io/iara/: offline.py
poseidon/signal/: lofar.py  passivesonar.py  utils.py
poseidon/visualization/: visualization.py
processing/: lofar.py
signal/: lofar.py
sound_io/: offline.py
